--- a/wtchat-ui/src/styles/App.css
+++ b/wtchat-ui/src/styles/App.css
@@ -5,4 +5,6 @@
   align-items: center;
   width: 100vw;
   height: 100vh;
+  background-image: url("../../resource/background.jpg");
+  z-index:-1;
 }
